fix: css overflow

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -84,6 +84,7 @@
 .username {
   width: 5rem;
   text-wrap: nowrap;
+  overflow: hidden;
 }
 
 .dropdownButton {
